--- a/product-service.properties
+++ b/product-service.properties
@@ -1,5 +1,6 @@
 # Configuración de la aplicación
 spring.application.name=product
+server.port=8001
 
 # Configuración de la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/mySQLBD?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
