--- a/auth-service.yml
+++ b/auth-service.yml
@@ -27,3 +27,8 @@ springdoc:
         default-model-rendering: model
     packagesToScan: com.unam.dwb.auth.controller
     pathsToMatch: /**
+
+eureka:
+client:
+  service-url:
+    defaultZone: http://localhost:8761/eureka
