--- a/invoice-service.properties
+++ b/invoice-service.properties
@@ -20,3 +20,6 @@ springdoc.swagger-ui.doc-expansion=none
 
 # URL de la API de Productos
 api.product.url=http://localhost:8081
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
