--- a/auth-service.yml
+++ b/auth-service.yml
@@ -29,6 +29,18 @@ springdoc:
     pathsToMatch: /**
 
 eureka:
-client:
-  service-url:
-    defaultZone: http://localhost:8761/eureka
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    hostname: localhost
+    prefer-ip-address: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,loggers,threaddump,heapdump
+  endpoint:
+    health:
+      show-details: always
