--- a/invoice-service.properties
+++ b/invoice-service.properties
@@ -23,3 +23,15 @@ api.product.url=http://localhost:8081
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+# Exponer endpoints actuator
+management.endpoints.web.exposure.include=health,info,metrics,loggers,threaddump,heapdump
+
+
+# Mostrar detalles de health
+management.endpoint.health.show-details=always
+
+
+# Instancia en eureka por hostname
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=false
