--- a/registry-service.yaml
+++ b/registry-service.yaml
@@ -1,10 +1,24 @@
-spring:
-  application:
-    name: registry
-
 server:
   port: 8761
+
+spring:
+  application:
+    name: registry-service 
+
 eureka:
+  instance:
+    hostname: localhost
   client:
-   register-with-eureka: false
-   fetch-registry: false
+    register-with-eureka: false 
+    fetch-registry: false       
+    service-url:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,loggers,threaddump,heapdump
+  endpoint:
+    health:
+      show-details: always
