--- a/product-service.properties
+++ b/product-service.properties
@@ -1,5 +1,5 @@
 # Configuración de la aplicación
-spring.application.name=product
+spring.application.name=product-service
 server.port=8082
 
 # Configuración de la base de datos MySQL
