--- a/registry-service.yaml
+++ b/registry-service.yaml
@@ -1,24 +1,10 @@
-server:
-  port: 8761
-
 spring:
   application:
-    name: registry-service 
+    name: registry
 
+server:
+  port: 8761
 eureka:
-  instance:
-    hostname: localhost
   client:
-    register-with-eureka: false 
-    fetch-registry: false       
-    service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,metrics,loggers,threaddump,heapdump
-  endpoint:
-    health:
-      show-details: always
+   register-with-eureka: false
+   fetch-registry: false
